bugfix title overflow and disabled button styled

--- a/src/app/components/pages/dashboard/sticky-notes/sticky-note-form/sticky-note-form.component.scss
+++ b/src/app/components/pages/dashboard/sticky-notes/sticky-note-form/sticky-note-form.component.scss
@@ -30,6 +30,10 @@ button[type=button] {
   background-color: #df4620;
 }
 
-button[type=button]:hover {
+button[type=button]:hover:not([disabled]) {
   background-color: #df4620;
+}
+
+button:disabled {
+  background-color: rgb(223, 70, 32, 0.5);
 }
