--- a/src/app/components/pages/dashboard/sticky-notes/sticky-note/sticky-note.component.scss
+++ b/src/app/components/pages/dashboard/sticky-notes/sticky-note/sticky-note.component.scss
@@ -1,6 +1,8 @@
 h2 {
   font-weight: bold;
   font-size: 2rem;
+
+  overflow-wrap: break-word;
 }
 
 p {
